# lrat_isa

./: .gitignore  .gitmodules  LICENSE  Makefile  README.in.md  README.md  ROOTS  cert_cadical.sh  index.md  mkhtml.sh  mkpkg.sh
benchmark_data/: README.md  filesizes.txt  run_two_Feb14_acl2.tgz  two_file.csv  two_file.kvdata  two_streaming.csv  two_streaming.kvdata
code/: .gitignore  Makefile  README.md  lib_isabelle_llvm.c  ll_dbg.cpp  ll_dbg_tag.sh  lrat_checker_export.dbg.ll  lrat_checker_export.h  lrat_isa_export.h  lrat_isa_export.ll  main.cpp
cpp_prototypes/: Assignment.h  ClauseDB.h  ClauseDB_malloc.h  Logging.h  README.md  VBEnc_It.h  main.cpp  test.cpp  test.txt
ex/: ex1.cnf  ex1.lrat  ex_sat.cnf
lrat_cpp/: CMakeLists.txt  CNF_It.h  ClauseId.h  Literal.h  Logging.cpp  MMFile.h  par_main.cpp  simple_seq.cpp
plots/: Makefile  README.md  cdf_cadical.data  cdf_cake.data  cdf_lrat_isa.data  cdf_streaming.tex  overhead_mrs_lrat_isa.data  overhead_wtime_cake.data  overhead_wtime_lrat_isa.data  ovh_mrs_streaming.tex  ovh_wtime_streaming.tex
thys/: .gitignore  CNF_Grammar.thy  CNF_Parser_Impl.thy  ClauseDB.thy  DS_Clause.thy  DS_Clause_Buffer.thy  DS_Clause_Builder.thy  DS_Clause_Database.thy  DS_Reversible_Assignment.thy  DS_Unsigned_Literal.thy  Debugging_Tools.thy  ISAT_Basic.thy  Intf_Dfun.thy  LRAT_Checker_Impl.thy  LRAT_Parsers.thy  LRAT_Sepref_Base.thy  Nat_Array_Dfun.thy  Ndet_Parser_Monad.thy  Parser_Input.thy  Parser_Refine.thy  Proto_Sepref_Ghostvar.thy  README.md  ROOT  Relaxed_Assignment.thy  SAT_Basic.thy  Sizes_Setup.thy  Trailed_Assignment.thy  (+3 more)
(+64 files in other folders)
